# tater

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
apps/: app.py  app_deep_nested.py  app_hierarchical.py  app_manual.py  app_manual_deep_nested.py  app_manual_list.py  app_manual_multiple.py  app_manual_nested.py  app_manual_simple.py  app_nested.py  app_span.py  app_spans.py
apps/config/: app_hooks.py  app_multiple.py  app_simple_mixed.py  conditional.py  deep_nested.py  hierarchical.py  hooks.py  list.py  list_nested.py  multiple.py  nested.py  simple.py  simple_mixed.py  span.py
apps/manual/: app_conditional.py  app_hooks.py  app_list.py  app_multiple.py  app_simple.py
apps/schema/: app.py  conditional.json  conditional_ui.json  hierarchical.json  hierarchical_ui.json  list.json  list_nested.json  list_ui.json  multiple.json  multiple_ui.json  nested.json  nested_ui.json  simple.json  simple_defaults.json  simple_mixed.json  simple_ui.json  span.json  span_ui.json
data/: breast_fdx_ontology.yaml  documents.json  note_001.txt  sample_schema.json  simple_schema.json  simple_schema_ui.json
k8s/chart/: Chart.yaml  values.yaml
spec/: STAND_LIBRARY_SPECIFICATION.md  app.md  callback_functionality.md  tater.md
src/: __init__.py  app.py
src_old/: app.py
tater/: __init__.py
tests/: conftest.py  test_bind_schema.py  test_browser.py  test_callbacks_core.py  test_cli.py  test_component_id.py  test_decode_field_path.py  test_has_value.py  test_helpers.py  test_hierarchical_tree.py  test_parse_schema.py  test_save_load.py  test_update_status.py  test_upload_validators.py  test_value_helpers.py  test_widgets_from_model.py
(+189 files in other folders)
