[project]
name = "tater"
version = "0.1.0"
description = "Clinical Note Annotation Application"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=0.12.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tater = "tater.ui.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tater"]
