[project]
name = "tater"
version = "0.1.0"
description = "Clinical Note Annotation Application"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.17.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.6.0",
    "openpyxl>=3.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tater = "tater.ui.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["tater"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "dash[testing]>=4.0.0",
    "webdriver-manager>=4.0.2",
]
